# src/main/kotlin/com/marukhan/openapi/controller/EmployeeController.kt
@@ -1,8 +1,8 @@
 package com.marukhan.openapi.controller
 
 import com.marukhan.openapi.api.request.EmployeeApi
-import com.marukhan.openapi.model.request.CreateEmployeeRq
-import com.marukhan.openapi.model.request.Employee
+import com.marukhan.openapi.model.request.EmployeeRq
+import com.marukhan.openapi.model.request.EmployeeRs
 import com.marukhan.openapi.service.EmployeeService
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.ResponseEntity
@@ -13,28 +13,33 @@ class EmployeeController : EmployeeApi {
 	@Autowired
 	lateinit var employeeService: EmployeeService
 
-	override fun addEmployee(createEmployeeRq: CreateEmployeeRq): ResponseEntity<Employee> =
-		ResponseEntity.ok(employeeService.save(
-			Employee(
-				createEmployeeRq.organizationId,
-				createEmployeeRq.firstName,
-				createEmployeeRq.lastName,
-				createEmployeeRq.jobTitle)
-		)
+	override fun addEmployee(employeeRq: EmployeeRq): ResponseEntity<EmployeeRs> =
+		ResponseEntity.ok(
+			employeeService.save(employeeRq)
 		)
 
 	override fun deleteEmployee(employeeId: String): ResponseEntity<Unit> =
-		ResponseEntity.ok(employeeService.deleteById(employeeId))
+		ResponseEntity.ok(
+			employeeService.deleteById(employeeId)
+		)
 
-	override fun updateEmployeeById(employeeId: String, organizationId: String, firstName: String, secondName: String, jobTitle: String): ResponseEntity<Employee> =
-		ResponseEntity.ok(employeeService.update(Employee(employeeId, organizationId, firstName, secondName, jobTitle)))
+	override fun updateEmployeeById(employeeId: String, employeeRq: EmployeeRq): ResponseEntity<EmployeeRs> =
+		ResponseEntity.ok(
+			employeeService.update(employeeId, employeeRq)
+		)
 
 	override fun deleteEmployees(): ResponseEntity<Unit> =
-		ResponseEntity.ok(employeeService.deleteAll())
+		ResponseEntity.ok(
+			employeeService.deleteAll()
+		)
 
-	override fun getEmployee(employeeId: String): ResponseEntity<Employee> =
-		ResponseEntity.ok(employeeService.findById(employeeId))
+	override fun getEmployee(employeeId: String): ResponseEntity<EmployeeRs> =
+		ResponseEntity.ok(
+			employeeService.findById(employeeId)
+		)
 
-	override fun getEmployees(): ResponseEntity<List<Employee>> =
-		ResponseEntity.ok(employeeService.findAll())
+	override fun getEmployees(): ResponseEntity<List<EmployeeRs>> =
+		ResponseEntity.ok(
+			employeeService.findAll()
+		)
 }
